--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
         <!-- Reference: (colorbrewer javascript file) https://github.com/mbostock/d3/blob/master/lib/colorbrewer/colorbrewer.js-->
         <!-- Reference: (how to include the colorbrewer.js file in a HTML file) http://bl.ocks.org/mbostock/5577023-->
         <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+
+        <style type="text/css">
+          .axis path,
+          .axis line {
+            fill: none;
+            stroke: black;
+            shape-rendering: crispEdges;
+          }
+          
+          .axis text {
+            font-family: sans-serif;
+            font-size: 11px;
+          }
+        </style>
+
     </head>
     <body>
         <script type="text/javascript">
@@ -15,6 +30,8 @@
             var w = 10000;
             var h = 1000;
             var barPadding = 1;
+            var axisVerticalPadding = barPadding * 10;
+            var axisHorizontalPadding = barPadding * 40;
             var dataset;
 
             function onlyUnique(value, index, self) {
@@ -28,24 +45,30 @@
                 if (error) {
                     console.log(error);
                 } else {
-                    console.log(data);
+                    //console.log(data);
                 }
 
                 dataset = data.slice(0, 500);
-
+                
                 // setting up scales in d3
                 var xScale = d3.scale.linear()
                                .domain([0, dataset.length])
-                               .range([0, w])
+                               .range([axisHorizontalPadding + 10, w])
 
                 var yScale = d3.scale.linear()
                                .domain([0, d3.max(dataset, function(d) { return parseFloat(d.runtime); })])
-                               .range([0, h/2]);
+                               .range([h/2, 0]);
 
                 // Reference (how to create a color scale): https://github.com/mbostock/d3/wiki/Ordinal-Scales
                 var genreScale = d3.scale.ordinal()
                                    .domain(dataset.map(function(d) {return d.genre;}).filter(onlyUnique))
                                    .range(colorbrewer.Set3[12])
+
+                // Create y-axis
+                var yAxis = d3.svg.axis()
+                              .scale(yScale)
+                              .orient("left")
+                              .ticks(10);
 
                 // Setting up svg canvas
                 var svg = d3.select("body")
@@ -59,10 +82,9 @@
                    .append("rect")
                    .attr({
                       x : function(d, i) { return xScale(i); },
-                      y : function(d) { return h/2 - yScale(d.runtime); },
+                      y : function(d) { return yScale(d.runtime); },
                       width : w / dataset.length - barPadding,
-                      height : function(d) { return yScale(d.runtime); },
-                      //fill : function(d) { return "rgb(0, 0, " + (d.runtime % 256) + ")"; }
+                      height : function(d) { return h/2 - yScale(d.runtime); },
                       fill : function(d) { return genreScale(d.genre);}
                    })
 
@@ -74,14 +96,19 @@
                       x : function(d, i) { return xScale(i) + (w / dataset.length) / 2; },
                       y : function(d) { return h/2; }
                    })
-                   .text(function(d) { return d.name; })
+                   .text(function(d, i) { return i + ': ' + d.name; })
                    .attr("transform", function(d, i) { // Reference (how to rotate labels): http://stackoverflow.com/questions/11252753/rotate-x-axis-text-in-d3
-                      console.log("rotate(90 " + i * (w / dataset.length) + "," + (h - parseFloat(d.runtime)) + ")");
                       return "rotate(90 " + xScale(i) + "," + (h/2 + 5 * barPadding) + ")";
                    })
                    .attr("test-anchor", "middle")
                    .attr("fill", "black")
 
+                //TOFIX: I am not sure why when I place axis in the end, then everythin will be rendered
+                // When I first redner the y axis, the first 10 movie names were not showing up properly
+                svg.append("g")
+                   .attr("class", "axis")
+                   .attr("transform", "translate(" + axisHorizontalPadding + "," + 0 + ")")
+                   .call(yAxis);
             });
         </script>
     </body>
