--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             font-family: sans-serif;
             font-size: 11px;
           }
+
+          rect {
+            -moz-transition: all 0.3s;
+            -o-transition: all 0.3s;
+            -webkit-transition: all 0.3s;
+            transition: all 0.3s;
+          }
         </style>
 
     </head>
@@ -48,7 +55,7 @@
                     //console.log(data);
                 }
 
-                dataset = data.slice(0, 100);
+                dataset = data.slice(0, 500);
                 
                 // setting up scales in d3
 
@@ -82,7 +89,8 @@
                 var sortBars = function() {
                     svg.selectAll("rect")
                        .sort(function (a, b) {
-                          return d3.descending(parseFloat(a.runtime), parseFloat(b.runtime));
+                          // return d3.descending(parseFloat(a.runtime), parseFloat(b.runtime));
+                          return d3.descending(a.genre, b.genre);
                        })
                        .transition()
                        .delay(function(d, i) {
@@ -125,8 +133,19 @@
                    })
                    .on("click", function() {
                       sortBars();
-                      sortLabels();
+                      //sortLabels();
                    })
+                   .on("mouseover", function() {
+                      d3.select(this)
+                      .attr("fill", "gray");
+                   })
+                   .on("mouseout", function (d) {
+                      d3.select(this)
+                      .transition()
+                      .duration(250)
+                      .attr("fill", function() { return genreScale(d.genre);});
+                   });
+                   //TO-INVESTIGATE: If you have these mouseover + mouseout transition, and at the same time a sort transition. THe newer transition (hover) will often interrupte the ongoing transition (sort), and it might look buggy. A better solution is to use changes in CSS so d3 doesn't worry about these smaller transitions.
 
                 svg.selectAll("text")
                    .data(dataset)
