--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                    .call(yAxis);
                 
                 // Transitions between Radio Buttons
+                // REFERENCE (How to do radio button transition): http://flowingdata.com/2013/01/17/how-to-animate-transitions-between-multiple-charts/
                 // --------------------------------------------------------------------------------------
 
                 var transitionByVotes = function() {
